# how-to-launch-memecoin-solana

./: Cargo.toml  README.md
docs/: index.html  robots.txt  sitemap.xml
